@@ -18,6 +18,8 @@ Features under a numbered section are complete and available in the Wrest gem.
 
 == Current
  * GH#64 Removed Caching.
+ * Extended Hash with method 'keys_to_array'
+ * GH#32 Callback for response status codes.
 
 == 1.0.0
  * GH#56 Detailed Net::HTTP debug output option added to Wrest::Native:Request.
